[package]
name = "solana-falcon-vault"
description = "Falcon-512 quantum-resistant vault for Solana"
authors = ["AlexGreyEntropy"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
arrayref = "0.3.9"
pinocchio = "0.8.4"
pinocchio-system = "0.2.3"
solana-nostd-sha256 = "0.1.3"

[dev-dependencies]
mollusk-svm = "0.3.0"
solana-sdk = "2.3.1"
#testing Falcon signatures
falcon-rust = "0.1.0"
rand = "0.9.1"

[[example]]
name = "client_example"
path = "examples/client_example.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
